.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/Opp_Product__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Opp_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Email_T__c</fullName>
        <label>Other Email (T)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Rating__c</fullName>
        <label>Other Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Chat__c</fullName>
        <label>Phone (Chat)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Platinum_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Platinum Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Conga__c</fullName>
        <formula>IF(
TEXT(Subscription__c) = &quot;Premium&quot;,
True,
False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium (Conga)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Max_Conga__c</fullName>
        <formula>IF(
TEXT(Subscription__c) = &quot;Premium Max&quot;,
True,
False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium Max (Conga)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Plus_Conga__c</fullName>
        <formula>IF(
TEXT(Subscription__c) = &quot;Premium Plus&quot;,
True,
False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium Plus (Conga)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opp Products</relationshipLabel>
        <relationshipName>Opp_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Cost__c</fullName>
        <label>Production Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rating_Link__c</fullName>
        <label>Rating Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Information__c</fullName>
        <label>Required Information</label>
        <picklist>
            <picklistValues>
                <fullName>Replace Current Spotlights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Addition to Current Spotlights</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restrict_CPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restrict CPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restrict_New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restrict New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_EQS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent EQS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence_Order__c</fullName>
        <label>Sequence Order</label>
        <picklist>
            <picklistValues>
                <fullName>Use Default Sequence Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent EQS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signature_Action__c</fullName>
        <formula>HYPERLINK( 
&quot;https://composer.congamerge.com?SessionId=&quot; &amp; $Api.Session_ID &amp; 
&quot;&amp;ServerUrl=&quot; &amp; $Api.Partner_Server_URL_290 &amp; 
&quot;&amp;Id=&quot; &amp; Id &amp; 
&quot;&amp;TemplateId=&quot; &amp; Conga_Template_Id__c &amp;
&quot;&amp;reportId=[OppProd]00OE0000002Nt75?pv0=&quot; &amp; Id &amp;
&quot;&amp;DefaultPDF=1&quot; &amp;
&quot;&amp;LG4=1&quot; &amp;
&quot;&amp;LG3=2&quot; &amp;
&quot;&amp;AC0=0&quot; &amp;
&quot;&amp;AttachmentParentId=&quot; &amp; Opportunity__r.Id &amp;
&quot;&amp;OFN=&quot; &amp; RecordType.Name &amp; &quot; - &quot; &amp; Opportunity__r.Account.Name &amp;
&quot;&amp;DS7=4&quot; &amp;
&quot;&amp;OCNR=1&quot; &amp;
&quot;&amp;ESRecipient1=&quot; &amp; Opportunity__r.Contact_Email__c &amp;
&quot;&amp;ESRecipient1Role=Signer&quot; &amp;
&quot;&amp;ESOpportunityid=&quot; &amp; Opportunity__r.Id &amp;
&quot;&amp;ESAccountid=&quot; &amp; Opportunity__r.Account.Id &amp;
&quot;&amp;ESAgreementName=&quot; &amp; RecordType.Name &amp; &quot; - &quot; &amp; Opportunity__r.Account.Name &amp;
&quot;&amp;ESSignatureType=2&quot;
,&quot;Initiate Signature&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signature Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sitelink_Pro_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelink Pro Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sitelink__c</fullName>
        <label>Sitelink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sitelinks_Advanced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sitelinks Advanced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Connections__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Connections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sorting_Criteria__c</fullName>
        <label>Sorting Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>Use Default Sorting Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent EQS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spotlight_Monthly_Rate__c</fullName>
        <label>Spotlight Monthly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spotlight_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spotlight Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spotlights_Make__c</fullName>
        <label>Spotlights Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Featured__c</fullName>
        <label>Subscription Featured</label>
        <picklist>
            <picklistValues>
                <fullName>Featured Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Max</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <picklist>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Max</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_Length__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Term Length</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TerraSky_Page__c</fullName>
        <label>TerraSky Page</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Send__c</fullName>
        <description>&quot;&amp;EmailAdditionalTo=chris.raskulinecz%40autotradergroup%2Ecom&quot; &amp;
&quot;&amp;EmailToId=003c000000XDBkM&quot; &amp;
&quot;&amp;DS7=12&quot; &amp;</description>
        <formula>HYPERLINK( 
&quot;https://composer.congamerge.com?SessionId=&quot; &amp; $Api.Session_ID &amp; 
&quot;&amp;ServerUrl=&quot; &amp; $Api.Partner_Server_URL_290 &amp; 
&quot;&amp;Id=&quot; &amp; Id &amp; 
&quot;&amp;TemplateId=&quot; &amp; Conga_Template_Id__c &amp; 
&quot;&amp;reportId=[OppProd]00Oc0000000PlFE?pv0=&quot; &amp; Id &amp; 
&quot;&amp;DefaultPDF=1&quot; &amp; 
&quot;&amp;DS7=12&quot; &amp;
&quot;&amp;LG3=2&quot; &amp; 
&quot;&amp;OCNR=0&quot; &amp; 
&quot;&amp;AttachmentParentId=&quot; &amp; Opportunity__r.Id &amp; 
&quot;&amp;OFN=&quot; &amp; RecordType.Name &amp; &quot; - &quot; &amp; Opportunity__r.Account.Name &amp; 
&quot;&amp;AC0=1&quot; &amp; 
&quot;&amp;MFTS0=Sent__c&quot; &amp; 
&quot;&amp;MFTSValue0=1&quot; &amp; 
&quot;&amp;UF0=1&quot; &amp; 
&quot;&amp;EmailRelatedToId=&quot; &amp; Id &amp; 
&quot;&amp;EmailToId=003c000000XDBkM&quot; &amp;
&quot;&amp;EmailTemplateId=00Xc0000000Qnsa&quot; 
,IF( Sent__c = false, &quot;Send to Fulfillment&quot;, &quot;Resend to Fulfillment&quot;) , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Send</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Base_Rate__c</fullName>
        <label>Total Monthly Base Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Rate__c</fullName>
        <label>Total Monthly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_New_Car_Lot_Size__c</fullName>
        <label>Total New Car Lot Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Production_Cost__c</fullName>
        <label>Total Production Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Twitter_ID__c</fullName>
        <label>Twitter ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Twitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_1__c</fullName>
        <label>Type (1)</label>
        <picklist>
            <picklistValues>
                <fullName>BASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLATINUM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_2__c</fullName>
        <label>Type (2)</label>
        <picklist>
            <picklistValues>
                <fullName>BASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLATINUM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_3__c</fullName>
        <label>Type (3)</label>
        <picklist>
            <picklistValues>
                <fullName>BASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLATINUM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Existing_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Existing (1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Existing_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Existing (2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Existing_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Existing (3)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Existing_Sitelinks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Existing (Sitelinks)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_GM_CPO_Templates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use GM CPO Templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Used_Car_Inventory_Source__c</fullName>
        <label>Used Car Inventory Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_Car_Lot_Size__c</fullName>
        <label>Used Car Lot Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Used_Makes_1__c</fullName>
        <label>Used Makes (1)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_Makes_2__c</fullName>
        <label>Used Makes (2)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_Makes_3__c</fullName>
        <label>Used Makes (3)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_Makes_Amount_1__c</fullName>
        <label>Used Makes $ (1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Used_Makes_Amount_2__c</fullName>
        <label>Used Makes $ (2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Used_Makes_Amount_3__c</fullName>
        <label>Used Makes $ (3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Used_Makes_Co_Op_1__c</fullName>
        <label>Used Makes Co-Op (1)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_Makes_Co_Op_2__c</fullName>
        <label>Used Makes Co-Op (2)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_Makes_Co_Op_3__c</fullName>
        <label>Used Makes Co-Op (3)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_Makes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used Makes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Used_Re_Direct__c</fullName>
        <label>Used Re-Direct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Images_Amount_c__c</fullName>
        <inlineHelpText>Vehicle Images (Premium / Featured)</inlineHelpText>
        <label>Vehicle Images $ (P/F)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Images_P_F_C_C__c</fullName>
        <description>Vehicle Images (Premium/Featured Core)</description>
        <label>Vehicle Images $ (P/F C)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Images_P_F_C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Vehicle Images Premium/Featured Core</description>
        <label>Vehicle Images (P/F C)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Images_P_F_M_C__c</fullName>
        <description>Vehicle Images Max Currency (Premium/Featured)</description>
        <label>Vehicle Images $ (P/F M)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Images_P_F_M__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Vehicle Images Max (Premium/Featured)</description>
        <label>Vehicle Images (P/F M)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Images_P_F_P_C__c</fullName>
        <description>Vehicle Images Plus (Premium/Featured)</description>
        <label>Vehicle Images $ (P/F P)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Images_P_F_P__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Vehicle Images Plus (Premium/Featured)</description>
        <label>Vehicle Images (P/F P)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Images__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vehicle Images (Premium / Featured)</inlineHelpText>
        <label>Vehicle Images (P/F)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type_1__c</fullName>
        <label>Vehicle Type (1)</label>
        <picklist>
            <picklistValues>
                <fullName>New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any Car</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type_2__c</fullName>
        <label>Vehicle Type (2)</label>
        <picklist>
            <picklistValues>
                <fullName>New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any Car</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type_3__c</fullName>
        <label>Vehicle Type (3)</label>
        <picklist>
            <picklistValues>
                <fullName>New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any Car</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Video_PRO_Opt_In_PM_Amount__c</fullName>
        <inlineHelpText>Video PRO Opt In (Premium / Featured Max)</inlineHelpText>
        <label>Video PRO Opt In $ (P/F M)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Video_PRO_Opt_In_PM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Video PRO Opt In (Premium/Featured Max)</inlineHelpText>
        <label>Video PRO Opt In (P/F M)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Video_PRO_Opt_In_PP_Amount__c</fullName>
        <inlineHelpText>Video PRO Opt In (Premium / Featured Plus)</inlineHelpText>
        <label>Video PRO Opt In $ (P/F P)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Video_PRO_Opt_In_PP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Video PRO Opt In (Premium / Featured Plus)</inlineHelpText>
        <label>Video PRO Opt In (P/F P)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Video_PRO_Opt_In_P_Amount__c</fullName>
        <inlineHelpText>Video PRO Opt In (Premium/Featured)</inlineHelpText>
        <label>Video PRO Opt In $ (P/F)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Video_PRO_Opt_In_P_F_C_C__c</fullName>
        <description>Video Pro Opt in Core (Premium/Featured)</description>
        <label>Video PRO Opt In $ (P/F C)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Video_PRO_Opt_In_P_F_P__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Video Pro Opt in Core (Premium/Featured)</description>
        <label>Video PRO Opt In (P/F C)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Video_PRO_Opt_In_P__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Video PRO Opt In (Premium/Featured</inlineHelpText>
        <label>Video PRO Opt In (P/F)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Video_PRO_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Video PRO Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whisper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Whisper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iMR_Opt_In__c</fullName>
        <label>iMR Opt In</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opp Product</label>
    <nameField>
        <displayFormat>OP-{00000}</displayFormat>
        <label>Opp Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opp Products</pluralLabel>
    <recordTypes>
        <fullName>KBB_New_GM_Classified</fullName>
        <active>true</active>
        <label>KBB New/GM Classified</label>
    </recordTypes>
    <recordTypes>
        <fullName>KBB_Used_GM_Classifieds</fullName>
        <active>true</active>
        <label>KBB Used/GM Classifieds</label>
    </recordTypes>
    <recordTypes>
        <fullName>S12_Featured</fullName>
        <active>true</active>
        <label>S12 Featured</label>
    </recordTypes>
    <recordTypes>
        <fullName>S12_GM_Alpha</fullName>
        <active>false</active>
        <label>S12 GM Alpha</label>
    </recordTypes>
    <recordTypes>
        <fullName>S12_GM_Alpha_Open</fullName>
        <active>false</active>
        <label>S12 GM Alpha Open</label>
    </recordTypes>
    <recordTypes>
        <fullName>S12_KBB_GM_Showcase</fullName>
        <active>false</active>
        <label>S12 KBB GM Showcase</label>
    </recordTypes>
    <recordTypes>
        <fullName>S12_KBB_Highlights</fullName>
        <active>true</active>
        <label>S12 KBB Highlights</label>
    </recordTypes>
    <recordTypes>
        <fullName>S12_KBB_Showcase</fullName>
        <active>true</active>
        <label>S12 KBB Showcase</label>
    </recordTypes>
    <recordTypes>
        <fullName>S12_KBB_Used</fullName>
        <active>false</active>
        <label>S12 KBB Used</label>
    </recordTypes>
    <recordTypes>
        <fullName>S12_Premium</fullName>
        <active>true</active>
        <label>S12 Premium</label>
    </recordTypes>
    <recordTypes>
        <fullName>S12_Premium_Core</fullName>
        <active>true</active>
        <label>S12 Premium Core</label>
    </recordTypes>
    <recordTypes>
        <fullName>S12_Skyscrapers</fullName>
        <active>true</active>
        <label>S12 Skyscrapers</label>
    </recordTypes>
    <recordTypes>
        <fullName>S12_Spotlights</fullName>
        <active>true</active>
        <label>S12 Spotlights</label>
    </recordTypes>
    <recordTypes>
        <fullName>S14_GM_Certified_New</fullName>
        <active>false</active>
        <label>S14 GM Certified New</label>
    </recordTypes>
    <recordTypes>
        <fullName>S14_New</fullName>
        <active>true</active>
        <label>S14 New</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>